# poetry-demo

./: pyproject.toml
poetry_demo/: collecting_kr_names.py  stock_names_20241028.csv
