[tool.poetry]
name = "poetry-demo"
version = "0.1.0"
description = ""
authors = ["Pi <yunji.seo@doomoolmori.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pykrx = "^1.0.48"
pandas = "^2.2.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
