[tool.poetry]
name = "poetry-demo"
version = "0.1.0"
description = ""
authors = ["Pi <yunji.seo@doomoolmori.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pykrx = "^1.0.48"
pandas = "^2.2.3"
finance-datareader = "^0.9.94"
beautifulsoup4 = "^4.12.3"
requests = "^2.32.3"
lxml = "^5.3.0"
plotly = "^5.24.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
